@@ -56,6 +56,7 @@ exempt of errors.
 - Paul Vixie
 - Peng
 - Peter Hartley
+- Pino Toscano (pinotree)
 - Rene Hexel
 - Robert Buckley (rbuckley)
 - Robert Gingher (robsbox)
